change call number

--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@
 						<h4>Contact Us</h4>
 						<div class="textwidget">
 							<p><i class="fa fa-home"></i> 379 5th Ave  New York, NYC 10018</p>
-							<p><i class="fa fa-phone"></i> (+1) 96 716 6879</p>
-							<p><i class="fa fa-fax"></i> (+1) 96 716 6879</p>
+							<p><i class="fa fa-phone"></i> (+3) 073 045 74 07</p>
+							<p><i class="fa fa-fax"></i> (+3) 073 045 74 07</p>
 							<p><i class="fa fa-envelope-o"></i> contact@site.com</p>
 							<p><i class="fa fa-clock-o"></i> Mon-Fri 09:00 - 17:00 Mon-Fri</p>
 						</div>
